--- a/Examples/iOS/Bazel/Bazel/BUILD
+++ b/Examples/iOS/Bazel/Bazel/BUILD
@@ -23,6 +23,7 @@ swift_library(
     data = [
         "Base.lproj/Main.storyboard",
     ],
+    visibility = ["//visibility:public"],
 )
 
 ios_application(
@@ -36,5 +37,6 @@ ios_application(
     infoplists = ["Info.plist"],
     launch_storyboard = "Base.lproj/LaunchScreen.storyboard",
     minimum_os_version = "13.0",
+    visibility = ["//visibility:public"],
     deps = [":Sources"],
 )
