--- a/Examples/iOS/WORKSPACE
+++ b/Examples/iOS/WORKSPACE
@@ -3,11 +3,11 @@ load(
     "git_repository",
 )
 
-git_repository(
-    name = "bazel_skylib",
-    remote = "https://github.com/bazelbuild/bazel-skylib.git",
-    tag = "0.9.0",
-)
+# git_repository(
+#     name = "bazel_skylib",
+#     remote = "https://github.com/bazelbuild/bazel-skylib.git",
+#     tag = "0.9.0",
+# )
 
 load(
     "@bazel_tools//tools/build_defs/repo:http.bzl",
@@ -35,11 +35,11 @@ git_repository(
     tag = "0.19.0",
 )
 
-git_repository(
-    name = "build_bazel_apple_support",
-    remote = "https://github.com/bazelbuild/apple_support.git",
-    tag = "0.7.2",
-)
+# git_repository(
+#     name = "build_bazel_apple_support",
+#     remote = "https://github.com/bazelbuild/apple_support.git",
+#     tag = "0.7.2",
+# )
 
 git_repository(
     name = "build_bazel_rules_swift",
@@ -47,21 +47,21 @@ git_repository(
     tag = "0.13.0",
 )
 
-load(
-    "@build_bazel_rules_apple//apple:repositories.bzl",
-    "apple_rules_dependencies",
-)
+# load(
+#     "@build_bazel_rules_apple//apple:repositories.bzl",
+#     "apple_rules_dependencies",
+# )
 
-load(
-    "@build_bazel_apple_support//lib:repositories.bzl",
-    "apple_support_dependencies",
-)
+# load(
+#     "@build_bazel_apple_support//lib:repositories.bzl",
+#     "apple_support_dependencies",
+# )
 
 load(
     "@build_bazel_rules_swift//swift:repositories.bzl",
     "swift_rules_dependencies",
 )
 
-apple_rules_dependencies()
-apple_support_dependencies()
+# apple_rules_dependencies()
+# apple_support_dependencies()
 swift_rules_dependencies()
