Up Bazel to `3.1.0`

--- a/Examples/iOS/WORKSPACE
+++ b/Examples/iOS/WORKSPACE
@@ -1,22 +1,8 @@
+workspace(name = "ogrenich_bazel_ios")
+
 load(
     "@bazel_tools//tools/build_defs/repo:git.bzl",
     "git_repository",
-)
-
-load(
-    "@bazel_tools//tools/build_defs/repo:http.bzl",
-    "http_archive",
-)
-
-http_archive(
-    name = "zlib",
-    build_file = "@com_google_protobuf//:third_party/zlib.BUILD",
-    sha256 = "c3e5e9fdd5004dcb542feda5ee4f0ff0744628baf8ed2dd5d66f8ca1197cb1a1",
-    strip_prefix = "zlib-1.2.11",
-    urls = [
-        "https://mirror.bazel.build/zlib.net/zlib-1.2.11.tar.gz",
-        "https://zlib.net/zlib-1.2.11.tar.gz",
-    ],
 )
 
 # rules_apple, rules_swift and apple_support no longer support releases. If
@@ -26,14 +12,21 @@ http_archive(
 git_repository(
     name = "build_bazel_rules_apple",
     remote = "https://github.com/bazelbuild/rules_apple.git",
-    tag = "0.19.0",
+    commit = "2c24d057f6597846fcdb957d0e9f0d452bb336c9",
 )
 
 git_repository(
     name = "build_bazel_rules_swift",
     remote = "https://github.com/bazelbuild/rules_swift.git",
-    tag = "0.13.0",
+    commit = "8767e70f1a8b500f5f3683cb23258964737a3888",
 )
+
+load(
+    "@build_bazel_rules_apple//apple:repositories.bzl",
+    "apple_rules_dependencies",
+)
+
+apple_rules_dependencies()
 
 load(
     "@build_bazel_rules_swift//swift:repositories.bzl",
@@ -41,3 +34,10 @@ load(
 )
 
 swift_rules_dependencies()
+
+load(
+    "@com_google_protobuf//:protobuf_deps.bzl",
+    "protobuf_deps",
+)
+
+protobuf_deps()
