Refactor with using of `default_visibility` for the Bazel packages

--- a/Examples/iOS/BUILD
+++ b/Examples/iOS/BUILD
@@ -1,3 +1,5 @@
+package(default_visibility = ["//visibility:public"])
+
 load(
     "@build_bazel_rules_apple//apple/internal:apple_framework_import.bzl",
     "apple_dynamic_framework_import",
@@ -6,5 +8,4 @@ load(
 apple_dynamic_framework_import(
     name = "Kingfisher",
     framework_imports = glob(["Carthage/Build/iOS/Kingfisher.framework/**"]),
-    visibility = ["//visibility:public"],
 )
